# cs294_lexer

./: CMakeLists.txt
.claude/: CLAUDE.md
.claude/commands/: implement.md
docs/: architecture.md
ffi-bridge/: CMakeLists.txt
ffi-bridge/.claude/: CLAUDE.md
ffi-bridge/.claude/commands/: implement.md
ffi-bridge/.claude/rules/: code-style.md  testing.md
ffi-bridge/.claude/skills/deploy/: SKILL.md
ffi-bridge/docs/: architecture.md
ffi-bridge/src/bindings/: bindings.md  demo.py  mathlib_wrapper.py
ffi-bridge/src/mathlib/: mathlib.cpp  mathlib.h  mathlib.md  mathlib_test.cc
ffi-bridge/tests/: test_bindings.py
lexer/: CMakeLists.txt
lexer/.claude/: CLAUDE.md
lexer/.claude/rules/: code-style.md  testing.md
lexer/.claude/skills/deploy/: SKILL.md
lexer/src/lexer/: lexer.cpp  lexer.md
lexer/src/main/: main.cpp
lexer/src/token/: token.cpp  token.md
lexer/tests/: sample.rs
src/ast/: ast.cpp  ast.h  ast.md  ast_printer.cpp  ast_printer.h  ast_test.cc
src/codegen/: codegen.md
src/lexer/: lexer.cpp  lexer.h  lexer_test.cc
src/main/: main.cpp  main.md
src/parser/: parser.cpp  parser.h  parser.md  parser_test.cc
src/semantic/: semantic.md
src/token/: token.cpp  token.h  token_test.cc
tests/: output.txt  sample.rs  sample_errors.rs
